# polymorphic-value-nanobind

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  test.py
src/: lib.cpp  polymorphic_caster.h
